fix content overflow when user appends

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
     gap: 15px;
     width: 90%;
     max-width: 800px;
-    height:100vh;
+    min-height:100vh;
     margin:0;
 
 }
@@ -399,15 +399,18 @@ input:checked + .button::before{
     border-radius: 8px;
     resize: both;
     overflow: auto;
+    scrollbar-color: red;
+    scrollbar-width: thin;
     min-width: 170px;
     min-height: 125px;
-    height: fit-content;
     max-width: 362px;
     max-height: 500px;
     opacity: 0.7;
-    overflow: hidden;
+    
 }
-
+.taskbar-container::-webkit-scrollbar{
+    width: 6px;
+}
 .taskbar-container:hover{
     opacity: 1;
 
@@ -430,8 +433,6 @@ input:checked + .button::before{
 .list-task{
     margin-top: -5px;
     height: 30px;
-    
-    
 }
 
 .todo-task{
@@ -450,6 +451,7 @@ input:checked + .button::before{
     margin: 0; 
     justify-content: space-between;
     font-size: 12px;
+    
 }
 
 .list-item{
@@ -474,9 +476,6 @@ input:checked + .button::before{
     overflow: hidden;
 }
 
-.list-container{
-    display: flex;
-}
 .fa-plus{
     background-color: #70fd0a;
     border-radius: 20px;
